--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -1,10 +1,12 @@
 body {
     font-family: Bitter, Bungee, Cambria, Cochin, Georgia, Times, Times New Roman, serif;
-    background-image: url(../images/bg-green-genor.svg);
-    background-position: center center;
-    background-repeat:  no-repeat;
+    z-index: -10;
+    background: url(../images/bg-green-genor.svg) no-repeat center center;
     background-attachment: fixed;
-    background-size:  cover;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
 }
 
 .logo a {
@@ -26,6 +28,7 @@ body {
 
 .title_name {
     margin-top: 1.5rem;
+    color: #141414;
 }
 
 .title_job {
@@ -35,4 +38,12 @@ body {
 
 .social_media {
     margin-top: 5rem;
+}
+
+.nav-link {
+    color: #e2e2e2;
+}
+
+.nav-link:hover {
+    color: #141414;
 }
